Fix broken layout.

--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -23,7 +23,7 @@
 
     h1 {
       color: $white;
-      font-size: $font-size * 3;
+      font-size: $font-size * 2.7;
     }
 
     .lead {
